updated uptime kuma config

--- a/uptime-checker.conf
+++ b/uptime-checker.conf
@@ -1,49 +1,82 @@
-    location /status/services {
-        #proxy_http_version 1.1;
-        #proxy_set_header Upgrade $http_upgrade;
-        #proxy_set_header Connection "upgrade";
-	#proxy_redirect          http://127.0.0.1:42000  /status/services;
-        proxy_pass_header       Server;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-	proxy_set_header        X-NginX-Proxy true;
-        proxy_set_header        X-Scheme $scheme;
-        proxy_set_header Host $host:$http_port;
-	proxy_pass http://127.0.0.1:42000/status/services;
+    location /uptime {
+        proxy_pass http://127.0.0.1:3001;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        # define url prefix
+        set $url_prefix uptime;
+
+        # remove url prefix to pass to backend
+        rewrite ^/uptime/?(.*)$ /$1 break;
+
+        # redirect location headers
+        proxy_redirect ^ /$url_prefix;
+        proxy_redirect /dashboard /$url_prefix/dashboard;
+
+        # sub filters to replace hardcoded paths
+        proxy_set_header Accept-Encoding "";
+        sub_filter_last_modified on;
+        sub_filter_once off;
+        sub_filter_types *;
+        sub_filter '/assets/' '/$url_prefix/assets/';
+        sub_filter '"assets/' '"$url_prefix/assets/';
+        sub_filter '/socket.io' '/$url_prefix/socket.io';
+        sub_filter '/icon.svg' '/$url_prefix/icon.svg';
+        sub_filter '/favicon.ico' '/$url_prefix/favicon.ico';
+        sub_filter '/apple-touch-icon.png' '/$url_prefix/apple-touch-icon.png';
+        sub_filter '/manifest.json' '/$url_prefix/manifest.json';
+        sub_filter '/add' '/$url_prefix/add';
+        sub_filter '/settings/' '/$url_prefix/settings/';
+        sub_filter '"/settings' '"/$url_prefix/settings';
+        sub_filter '/dashboard' '/$url_prefix/dashboard';
+        sub_filter '/maintenance' '/$url_prefix/maintenance';
+        sub_filter '/add-status-page' '/$url_prefix/add-status-page';
+        sub_filter '/manage-status-page' '/$url_prefix/manage-status-page';
     }
 
+   location /status/services {
+        proxy_pass http://127.0.0.1:3001/status/services;
+	proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
-location /api/status-page/heartbeat/services {
-	proxy_redirect off;
-        proxy_pass_header       Server;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-NginX-Proxy true;
-        proxy_set_header        X-Scheme $scheme;
-        proxy_set_header Host $host:$http_port;
-        proxy_pass http://127.0.0.1:42000;
-    #set $noslash $1;
-    #rewrite ^ $noslash permanent;
-    #rewrite ^([^.]*[^/])$ $scheme://$host$1 permanent;
-    #return 302 $scheme://$host/api/status-page/heartbeat/services;
- }
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
 
     location /assets {
-        alias /uptime-kuma/app/dist/assets;
+        alias /opt/uptime-kuma/dist/assets;
     }
+
+  location /api/status-page/heartbeat/services {
+	proxy_pass http://127.0.0.1:3001;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+}
 
    location =/api/status-page/services/manifest.json {
-        alias /uptime-kuma/app/dist/manifest.json;
-    }
+       alias /opt/uptime-kuma/dist/manifest.json;
+   }
 
-#   location =/manifest.json {
-#        alias /uptime-kuma/app/dist/manifest.json;
-#    }
 
   location =/icon.svg {
-	  alias /uptime-kuma/app/dist/icon.svg;
+          alias /opt/uptime-kuma/dist/icon.svg;
   }
 
   location =/api/status-page/services/icon-192x192.png {
-          alias /uptime-kuma/app/dist/icon-192x192.png;
-  }
+          alias /opt/uptime-kuma/dist/icon-192x192.png;
+}
