--- a/grafana.conf
+++ b/grafana.conf
@@ -1,7 +1,7 @@
 # Note: Grafana must be served from subpath to use this configuration.
 
  location /grafana/ {
-    proxy_pass http://localhost:3000;
+    proxy_pass http://localhost:<port>;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
