--- a/panel-dashboard.conf
+++ b/panel-dashboard.conf
@@ -6,7 +6,7 @@ location / {
   proxy_set_header X-Forwarded-Host $host;
   proxy_set_header X-Forwarded-Proto $scheme;
   proxy_set_header Origin "";
-  proxy_pass http://127.0.0.1:8333;
+  proxy_pass http://127.0.0.1:<port>;
   proxy_http_version 1.1;
   proxy_set_header Upgrade $http_upgrade;
   proxy_set_header Connection "Upgrade";
