--- a/tautulli.conf
+++ b/tautulli.conf
@@ -5,5 +5,5 @@ location /plexpy {
 
 location /tautulli {
   include /etc/nginx/snippets/proxy.conf;
-  proxy_pass        http://127.0.0.1:8181/tautulli;
+  proxy_pass        http://127.0.0.1:<port>/tautulli;
 }
