--- a/uptime-checker.conf
+++ b/uptime-checker.conf
@@ -1,5 +1,5 @@
     location /uptime {
-        proxy_pass http://127.0.0.1:3001;
+        proxy_pass http://127.0.0.1:<port>;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -57,7 +57,7 @@
     }
 
   location /api/status-page/heartbeat/services {
-	proxy_pass http://127.0.0.1:3001;
+	proxy_pass http://127.0.0.1:<port>;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
