--- a/gpt4free.conf
+++ b/gpt4free.conf
@@ -1,12 +1,12 @@
 upstream gpt_backend {
-  server 127.0.0.1:40025;
+  server 127.0.0.1:<port>;
   keepalive 2;
 }
 
 server {
   listen 80;
   listen [::]:80;
-  server_name chat.nirzak.tech;
+  server_name sub_domain;
 
   location / {
       proxy_http_version 1.1;
