--- a/plex.conf
+++ b/plex.conf
@@ -8,7 +8,7 @@ server {
 	listen 80;
 	#Enabling http2 can cause some issues with some devices, see #29 - Disable it if you experience issues
 	listen 443 ssl http2; #http2 can provide a substantial improvement for streaming: https://blog.cloudflare.com/introducing-http2/
-	server_name plex.nirzak.tech;
+	server_name sub_domain;
 
 	ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 1d;
